[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Images/inventory.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/Inventory/InventoryTileController.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://Resources/Images/arrow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0.0588235, 0.00784314, 0.027451, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 1 )
corner_detail = 4

[node name="Inventory Tile" type="TextureButton"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantityCount" type="Label" parent="."]
visible = false
margin_left = -0.339625
margin_top = 12.7936
margin_right = 13.6603
margin_bottom = 30.7936
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 0.410375
margin_top = -17.2064
margin_right = 86.4104
margin_bottom = 16.7936
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pickaxe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTween" type="Tween" parent="."]

[node name="PointerTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 8.25, -16.5 )
texture = ExtResource( 5 )
